tests/cases/fail/list_str_literal_mixed.p4
def main() -> None:
    xs: list[str] = ["a", 1]
